Fix border of collapsed sidenav

--- a/packages/angular/src/app/layouts/side-nav-outer-toolbar/side-nav-outer-toolbar.component.scss
+++ b/packages/angular/src/app/layouts/side-nav-outer-toolbar/side-nav-outer-toolbar.component.scss
@@ -7,6 +7,10 @@
   width: 100%;
 }
 
+:host ::ng-deep .dx-drawer-panel-content {
+  border-right: 1px solid $base-border-color;
+}
+
 .layout-body {
   flex: 1;
   min-height: 0;
