--- a/packages/angular/src/app/shared/components/side-navigation-menu/side-navigation-menu.component.scss
+++ b/packages/angular/src/app/shared/components/side-navigation-menu/side-navigation-menu.component.scss
@@ -9,7 +9,6 @@
   width: 250px !important;
 
   .menu-container {
-    border-right: 1px solid $base-border-color;
     background-color: $side-panel-background;
     min-height: 100%;
     display: flex;
